remove unused code, improve config, make auth work by adding proper certs variable
